--- a/sneaker/css/home.css
+++ b/sneaker/css/home.css
@@ -1,18 +1,20 @@
 
 
-
   .how-to-grid{ 
      display: grid;
      width: 768px;
+     max-width: 90%;
      
-        grid-template-columns: auto auto auto auto   ;}
+        grid-template-columns: 1fr 1fr 1fr 1fr   ;}
         .how-to-icon{
 	width: 50px;
     margin-bottom: 20px;
     margin-left: 0px;
+    float: right;
     margin-right: 15px;
-    margin-top: 60px;
+    margin-top: 80px;
 }
+
 .home-heading{
 margin: 0px;
 text-align: center;
@@ -41,43 +43,23 @@ img.home-heading-img{
 }    
 
 body{
-width: 100%;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	max-width: 95%;
     height: 100%;
     background: url(../images/sitebg.jpg) no-repeat center fixed;
     background-size: auto;
-      background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: bottom; 
-}
-/* CSS FOOTER*/
-	footer{
-margin: auto;
-height: 50px;
-text-align: center;
+    background-repeat: no-repeat;
+  	background-attachment: fixed;
+  	background-position: bottom; 
+  	background-color: rgb(246, 246, 246);		
+	font-family: Greycliff, "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
+	width: 768px;
+	margin: auto;
+	font-size: 38px;
 	}
-	ul{
-		margin: 0em;
-		padding: 0px;
-		margin-bottom: 1em;
-	}
-	li{
-		margin-left: 5px;
-		font-size: 25px;
-		list-style: none;
-	}
-	footer a{
-		text-decoration: none;
-		 color: rgb(86, 95, 169);
-	}
-	/*EINDE FOOTER CSS*/
-	body{
-				background-color: rgb(246, 246, 246);
-		
-		font-family: Greycliff, "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
-		width: 768px;
-		margin: auto;
-		font-size: 38px;}
-			.style-image{
+	.style-image{
 				cursor: pointer;
 				width: 192px;
 			}
@@ -87,35 +69,43 @@ text-align: center;
 			.underline {
     border-bottom: 2px solid rgb(86, 95, 169);
 }
+/*Nav */
 nav img{
 	max-width: 100%;
 	margin-top: 2%;
 }
+li.nav-logo {
+    margin: 0;
+}
+/* Einde nav */
 .outer-box{
-	width: 99vw;
+	width: 100%;
 	position: absolute;
 	left: 0;
 	background: rgb(232, 229, 226);
-	height: 375px;
+	height: 47.5%;
 
 
 }
+
 .outer-box-2{
-	width: 99vw;
+	width: 100%;
 	position: absolute;
 	left: 0;
 	background: rgb(232, 229, 226);
-	height: 440px;
+	height: 50.5%;
 
 
 }
 .inner-box-2 {
     width: 768px;
     margin: auto;
+    max-width: 100%;
     
 }
 .inner-box {
     width: 768px;
+    max-width: 100%;
     margin: auto;
     
 }
@@ -192,6 +182,7 @@ border: 1px solid #ddd;
 
 	img{
 		max-width: 768px;
+		max-width: 100%;
 	}
 	input{
 		height: 3rem;
@@ -338,6 +329,9 @@ margin: 0em 0em 10em 0em ;
     transition: all 250ms ease 0s;
     margin: 0px;
 	}
+.middle-section.try{
+	height: 50%;
+}
 @media only screen and (min-device-width : 320px) and (min-device-width : 480px) {	
 	.mobile{ display: none; }}
 /* iPads (portrait and landscape) ----------- */
@@ -349,6 +343,7 @@ margin: 0em 0em 10em 0em ;
     display: grid;
     grid-template-columns: 50px 75px 525px auto;
 }	
+
 }
 /* Smartphones (portrait and landscape) ----------- */
 
@@ -451,19 +446,6 @@ p .label {
 		text-align: center;
 		color: green;
 	}
-
-	footer li {
-		display: inline;
-		 
-	}
-	footer ul {
-		 
-		margin: 0;
-		padding-left: 12%;
-		font-size: 16px;
-		padding-right: 12%;
-		padding-bottom: 2%;
-	}
 	
 
 }
@@ -548,4 +530,68 @@ p .label {
  
 
 
-        }
+.outer-section{
+	height: 2.5%;
+}
+.middle-section{
+	height: 47%;
+}
+
+/*Repsonsive maken!*/
+@media only screen and (max-width: 420px) {
+.how-to-grid {
+	margin-top: 40px;
+    display: grid;
+    width: 768px;
+    max-width: 90%;
+    padding: 5%;
+    grid-template-columns: auto auto  ;
+}
+.home-heading{
+	padding: 1.5%
+}
+.how-to-icon{
+	margin-top: 30px;
+	margin-bottom: 35px;
+}
+.label{
+	font-size: 20px;
+	max-width: 100%;
+}
+ section.margin-top p.label{
+	padding: 8%;
+}
+ section.margin-top form input{
+	margin: 5%;
+	max-width: 90%; 
+		margin-top: 0px;
+	margin-bottom: 10px;
+}
+ section.margin-top form button{
+	width: 90%;
+	margin: 5%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	height: 30px;
+	font-size: 20px;
+}
+.label-margin{
+	margin: 0 !important;
+}
+.outer-section{
+	height: 1%;
+}
+.middle-section{
+	height: 650px;
+	width: 100%
+}
+.outer-box{
+	height: 660px;
+}
+.outer-box-2{
+	height: 810px;
+}
+.middle-section.try{
+	height: 809px;
+}
+}
