--- a/sneaker/css/home.css
+++ b/sneaker/css/home.css
@@ -1,597 +1,176 @@
-
-
-  .how-to-grid{ 
-     display: grid;
-     width: 768px;
-     max-width: 90%;
-     
-        grid-template-columns: 1fr 1fr 1fr 1fr   ;}
-        .how-to-icon{
-	width: 50px;
-    margin-bottom: 20px;
-    margin-left: 0px;
-    float: right;
-    margin-right: 15px;
-    margin-top: 80px;
-}
-
-.home-heading{
-margin: 0px;
-text-align: center;
-}
-section.why-us {
-	text-align: center;
-}
-section.why-us section.how-to-grid {
-    text-align: center;
-}
-section.why-us section.how-to-grid section{
-	padding-left: 10px;
-	padding-right: 10px;
-}
-section.why-us section.how-to-grid section  {
-    width: 100%;
-    text-align: center;
-}
-
-img.home-heading-img{
-	margin: 20px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
-}    
-
+/* General CSS */
 body{
-	padding: 0;
-	margin: 0;
+	height: 100%;
 	width: 100%;
-	max-width: 95%;
-    height: 100%;
-    background: url(../images/sitebg.jpg) no-repeat center fixed;
-    background-size: auto;
-    background-repeat: no-repeat;
-  	background-attachment: fixed;
-  	background-position: bottom; 
-  	background-color: rgb(246, 246, 246);		
+	padding:0;
+	margin: 0;
+	position:absolute;
+	background-color: rgb(246, 246, 246);
 	font-family: Greycliff, "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
+}
+.wrapper{
+	max-width: 100%;
 	width: 768px;
 	margin: auto;
-	font-size: 38px;
-	}
-	.style-image{
-				cursor: pointer;
-				width: 192px;
-			}
-			span{
-				border-bottom: none;
-			}
-			.underline {
-    border-bottom: 2px solid rgb(86, 95, 169);
 }
-/*Nav */
+.heading{
+	display: block;
+    font-size: 3.5em;
+    text-align: center;
+}
+.small-heading{
+	font-size: 1.875rem;
+    line-height: 0.933333;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin: auto;
+    text-align: center;
+    margin-top: 1em;
+}
+label{
+    display: block; 
+    min-height: 10px; 
+    height: auto !important; 
+    height: 10px; 
+	text-align: left;
+    font-size: 0.875rem;
+    line-height: 0.933333;
+    font-weight: 500;
+    color: rgb(51, 51, 51);
+    text-transform: uppercase;
+    cursor: auto;
+    margin: 0px;
+    margin-top: 1em;
+}
+a{
+	color: black;
+	text-decoration: none;
+}
+/*Navigatie CSS */
 nav img{
 	max-width: 100%;
-	margin-top: 2%;
 }
-li.nav-logo {
-    margin: 0;
+nav ul{
+	text-align: center;
 }
-/* Einde nav */
-.outer-box{
-	width: 100%;
-	position: absolute;
-	left: 0;
-	background: rgb(232, 229, 226);
-	height: 47.5%;
-
-
+nav  .nav-item{
+	display: inline-block;
+	font-size: 20px;
+	text-decoration: underline;
 }
-
-.outer-box-2{
-	width: 100%;
-	position: absolute;
-	left: 0;
-	background: rgb(232, 229, 226);
-	height: 50.5%;
-
-
+/*About us CSS*/
+.about-us{
+	margin: 2.5%
 }
-.inner-box-2 {
-    width: 768px;
-    margin: auto;
-    max-width: 100%;
-    
+.about-us-text{
+	margin: auto;
 }
-.inner-box {
-    width: 768px;
-    max-width: 100%;
-    margin: auto;
-    
+/*Packages CSS*/
+.packages{
+	max-width: 100%;
+	width:768px;
+	margin: 2.5%
+	margin-top: 40px;
+	margin-bottom: 40px;
 }
-	button{
-		font-family: Greycliff, "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
-	}
-		.label-margin{
-		margin-top: 3em !important;
-		margin-bottom: 1em !important;
-	}
-	.input-radio{
-		height: 25px;
-		margin: 0;
-	}
-
-	.radio-label{
-	padding: 18px 20px 18px 90px;
- 
-    width: 100%;
-    display: flex;
+.packages img{
+	max-width: 100%;
+	width:768px;
+}
+.small-heading a{
+color: rgb(86, 95, 169);
+}
+/*How to CSS */
+.how-to-full{
+	width: 100vw;
     position: relative;
-    flex-wrap: wrap;
-    cursor: pointer;
-    align-items: center;
-		   
-	}
-	.radio-label img{
-		width: 50px;
-
-	}
-	.shipping-box{
-		margin: 0em;
-		padding: 0.5em;
-border: 1px solid #ddd;
-	}
-	.label{
-	
-    text-align: left;
-    font-size: 0.875rem;
-    line-height: 0.933333;
-    font-weight: 500;
-    color: rgb(51, 51, 51);
-    text-transform: uppercase;
-    cursor: auto;
-    margin: 0px;
-    margin-top: 1em;
-	}
-	.center{
-		text-align: center;
-	}
-	.label-big{
-		
-    font-size: 1.875rem;
-    line-height: 0.933333;
-    font-weight: 500;
-    color: rgb(51, 51, 51);
-    text-transform: uppercase;
-    cursor: auto;
-    margin: 0px;
-    margin-top: 1em;
-	}
-	.shipping-label{
-		margin-top: 0.5em;
-	}
-		.shipping-label-free{
-		margin-top: 0.5em;
-		color: green;
-	}
-	p.label-big a {
-    text-decoration: none;
-    color: rgb(86, 95, 169);
-    text-transform: none;
+    left: calc(-50vw + 50%);
 }
-
-	img{
-		max-width: 768px;
-		max-width: 100%;
-	}
-	input{
-		height: 3rem;
-  
-    font-size: 1rem;
-    background-color: rgb(255, 255, 255);
-    cursor: default;
-    padding: 0px 1.25rem;
-    border-style: solid;
-    border-color: rgb(227, 223, 220);
-    border-image: initial;
-    border-width: 2px;
-    border-radius: 0.25rem;
-    outline: none;
-    margin-top: 1em;
-    margin-right: 1em;
-	}
-	input{
-		height: 3rem;
-  
-    font-size: 1rem;
-    background-color: rgb(255, 255, 255);
-    cursor: default;
-    padding: 0px 1.25rem;
-    border-style: solid;
-    border-color: rgb(227, 223, 220);
-    border-image: initial;
-    border-width: 2px;
-    border-radius: 0.25rem;
-    outline: none;
-    margin-top: 1em;
-    margin-right: 1em;
-	}
-	p{
-		font-size: 16px;
-	}
-	.margin-top{
-		margin-top: 100px;
-	}
-	.margin-bottom{
-		margin-bottom: 40px;
-	}
-		.margin-top-small{
-		margin-top: 10px;
-	}
-		.input-single-grid{
-		display: grid;
-		 grid-template-columns:  auto ;
-	}	
-	.input-double-grid{
-		display: grid;
-		 grid-template-columns: auto auto ;
-	}	
-		.input-triple-grid{
-		display: grid;
-		 grid-template-columns: auto auto auto; ;
-	}
-	.shipping-grid{
-		display: grid;
-		grid-template-columns: 55px 60px 525px auto;
-	}
-	.shipping-grid img{
-		width: 50px;
-		height: 25px;
-	}	
-		.date-container{
+.how-to-full-inner{
+	width: 100vw;
+    position: relative;
+    left: calc(-50vw + 50%);
+    background: rgb(232, 229, 226);
+    padding-bottom: 10px;
+}
+.heading-how-to{
+	padding: 0;
+	margin-top: -5px;
+}
+.how-to-grid{
+	max-width: 100%;
+	width: 768px;
+	margin: auto;
 	display: grid;
-	 grid-template-columns: auto  ;
-	}
-
-	.terms{
-		    margin-bottom: 0px;
-    color: rgb(137, 137, 137);
-    font-size: 10px;
+	grid-template-columns: auto auto auto auto ;
 }
-
-		.cart-button{
-			box-sizing: border-box;
-    cursor: pointer;
-  
-    margin: 0em 0em 2em 0em ;
- 		font-family: Greycliff, "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
-
-    -webkit-box-align: center;
-    align-items: center;
-    width: 20%;
-    flex-direction: row;
-    -webkit-box-pack: center;
-    justify-content: center;
-   
+.icon-box{
+	display: flex;
+  align-items: center;
+  justify-content: center
+}
+.icon{
+	width: 50px;
+	display: flex;
+	padding: 10px;
+}
+.form-box{
+	padding-top: 40px;
+	margin: 2.5%;
+	padding-bottom: 40px;
+	max-width: 100%;
+	width: 768px;
+	margin: auto;
+}
+.form-box div{
+	margin: 2.5%;
+}
+input[type="text"]{
+	height: 3rem;
+    font-size: 1rem;
+    background-color: rgb(255, 255, 255);
+    cursor: default;
+    padding: 0px 1.25rem;
+    border-style: solid;
+    border-color: rgb(227, 223, 220);
+    border-image: initial;
+    border-width: 2px;
+    border-radius: 0.25rem;
+    outline: none;
+    margin-top: 1em;
+    margin-right: 1em;
+}
+button{
+	cursor: pointer;
+    font-family: Greycliff, "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
     font-size: 0.875rem;
     line-height: 1.275;
     font-weight: 500;
     text-transform: uppercase;
-    text-align: center;
-    height: 3rem;
     background-color: rgb(240, 106, 88);
     color: rgb(255, 255, 255);
-    padding: 0px;
-    border-width: initial;
     border-style: none;
-    border-color: initial;
-    border-image: initial;
-    outline: none;
-    text-decoration: none;
-    transition: all 250ms ease 0s;
-    margin: 0px;
-	}
-	button{
-		font-family: Greycliff, "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
-	}
-		.active{
-		border-color: rgb(86, 95, 169) !important;
-		border: 1px solid rgb(86, 95, 169);
-	}
-	.cart-cancel{
-				font-family: Greycliff, "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
-
-box-sizing: border-box;
-margin: 0em 0em 10em 0em ;
-    cursor: pointer;
-    -webkit-box-align: center;
-    align-items: center;
-    width: 100%;
-    flex-direction: row;
-    -webkit-box-pack: center;
-    justify-content: center;
-   
-    font-size: 0.875rem;
-    line-height: 1.275;
-    font-weight: 500;
-    text-transform: uppercase;
-    height: 3.125rem;
-    background-color: rgb(232, 229, 226);
-    color: rgb(51, 51, 51);
-    text-align: center;
-    padding: 0px ;
-    border-width: initial;
-    border-style: none;
-    border-color: initial;
-    border-image: initial;
-    outline: none;
-    text-decoration: none;
-    transition: all 250ms ease 0s;
-    margin: 0px;
-	}
-.middle-section.try{
-	height: 50%;
+    padding: 15px 30px;
 }
-@media only screen and (min-device-width : 320px) and (min-device-width : 480px) {	
-	.mobile{ display: none; }}
-/* iPads (portrait and landscape) ----------- */
-
-
-
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-.shipping-grid {
-    display: grid;
-    grid-template-columns: 50px 75px 525px auto;
-}	
-
+/* Responsive */
+@media only screen and  (max-device-width : 600px) {
+.how-to-grid{
+	max-width: 95%;
+	margin: 2.5%;
 }
-/* Smartphones (portrait and landscape) ----------- */
-
-
-
-
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-
-.label { 
-	font-size: 33px; 
+.svg-box{
+	margin-top: -5px;
 }
-p .label {
-	font-size: 33px; 
+label{
+    display: block; 
+    min-height: 40px; 
+    height: auto !important; 
+    height: 40px; 
 }
-	  
-	 
-
-	.input-double-grid
-	{
-		display: none;
-	}
-	.input-triple-grid
-	{
-		display: none;
-	}
-	.shipping-grid img
-	{
-		width:0px;
-	}
-	.shipping-grid 
-	{
-    display: grid;
-	grid-template-columns: 24px 190px 320px auto;
-	}
-
-	.input-flex 
-	{
-		font-size: 27px;
-	}
-
-	img 
-	{
-		margin-top: 2%;
-	}
-
-	.cart-button
-	{
-		 font-size: 40px; 
-		 height: 2em;
-		 margin-bottom: 5%;
-	}
-	.cart-cancel
-	{ 
-		font-size: 30px;
-    height: 1.9em;
-    margin-bottom: 6em;
-	}
-
-	.margin-top 
-	{
-		margin-top: 10%;
-		margin-bottom: 1%;
-	}
-
-	.label.shipping-label {
-		font-size: 20px;
-	}
-
-	.shipping-label
-	{	
-		margin-top: 2%;
-		text-align: center;
-	}
-
-	.shipping-label-kost
-	{	
-		margin-top: 6%;
-    	margin-right: 9%;
-		text-align: center;
-	}
-
-	.shipping-label-post
-	{	
-		margin-top: 9%;
-    	margin-right: 9%;
-		text-align: center;
-	}
-
-
-	.shipping-label-free
-	{	
-		margin-top: 2%;
-		text-align: center;
-		color: green;
-	}
-
-	.shipping-label-freee
-	{	
-		margin-top: 5%;
-		text-align: center;
-		color: green;
-	}
-	
-
-}
-/* CSS for plans */
-
-    .membership-title{
-    text-align: center;
-    line-height: 1;
-    font-size: 30px !important;   
-    font-weight: 500;
-    font-size: 1.875rem;
-    color: rgb(51, 51, 51);
-    margin: 0px;
-    }
-    .membership-par{
-    
-    font-size: 0.875rem;
-    line-height: 1.275;
-    font-weight: 400;
-    text-align: center;
-    color: rgb(51, 51, 51);
-    margin: 0px;
-    font-size: 15px;
-    margin-top: 1em;
-    }
-    .membership-price{
-        
-    text-align: left;
-    line-height: 1.275;
-    display: flex;
-    max-height: 1.375rem;
-    height: 1.375rem;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    justify-self: auto;
-    font-size: 0.875rem;
-    font-weight: bold;
-    width: auto;
-    color: rgb(255, 255, 255);
-    background-color: rgb(86, 95, 169);
-    margin: 0px;
-    grid-area: auto / auto / auto / auto;
-    border-radius: 1.375rem;
-    border-width: 2px;
-    border-style: solid;
-    border-color: white;
-    border-image: initial;
-    padding: 0.875rem 1.3125rem;
-    transition: background-color 0.2s ease-out 0s;
-    }
-    .membership-selector{
-        box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 4px;
-        margin-top: 1em !important;
-    box-sizing: border-box;
-    text-align: center;
-    display: grid;
-    -webkit-box-align: center;
-    align-items: center;
-    width: auto;
-    cursor: default;
-    border-radius: 0.25rem;
-    background: rgb(255, 255, 255);
-    margin: 0px;
-    outline: none;
-    text-decoration: none;
-    padding: 1.6875rem 0.875rem 1.875rem;
-    border-width: 2px;
-    border-style: solid;
-    border-image: initial;
-    transition: border-color 0.2s ease-out 0s;
-    border-color: rgb(232, 229, 226);
-    }
-           .membership-container{
-        display: grid;
-        width: 624px;
-        margin: auto;
-        grid-template-columns: auto auto auto  ;
-
-    }
- 
-
-
-.outer-section{
-	height: 2.5%;
-}
-.middle-section{
-	height: 47%;
-}
-
-/*Repsonsive maken!*/
-@media only screen and (max-width: 420px) {
-.how-to-grid {
-	margin-top: 40px;
-    display: grid;
-    width: 768px;
-    max-width: 90%;
-    padding: 5%;
-    grid-template-columns: auto auto  ;
-}
-.home-heading{
-	padding: 1.5%
-}
-.how-to-icon{
-	margin-top: 30px;
-	margin-bottom: 35px;
-}
-.label{
-	font-size: 20px;
-	max-width: 100%;
-}
- section.margin-top p.label{
-	padding: 8%;
-}
- section.margin-top form input{
-	margin: 5%;
-	max-width: 90%; 
-		margin-top: 0px;
-	margin-bottom: 10px;
-}
- section.margin-top form button{
-	width: 90%;
-	margin: 5%;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	height: 30px;
-	font-size: 20px;
-}
-.label-margin{
-	margin: 0 !important;
-}
-.outer-section{
-	height: 1%;
-}
-.middle-section{
-	height: 650px;
-	width: 100%
-}
-.outer-box{
-	height: 660px;
-}
-.outer-box-2{
-	height: 810px;
-}
-.middle-section.try{
-	height: 809px;
+.icon-box p{
+    display: block; 
+    min-height: 40px; 
+    height: auto !important; 
+    height: 40px; 
 }
 }
