--- a/sneaker/css/kies_pakket.css
+++ b/sneaker/css/kies_pakket.css
@@ -570,6 +570,7 @@ nav a{
 .how-to-full{
     width: 100vw;
     position: relative;
+    margin-top: 100px;
     left: calc(-50vw + 50%);
 }
 .how-to-full-inner{
